--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -26,4 +26,13 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/btn_send_notification" />
 
+    <Button
+        android:id="@+id/btn_custom_notification"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:text="custom notification"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/btn_send_notification_2"></Button>
+
 </androidx.constraintlayout.widget.ConstraintLayout>
